--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/marked": "^5.0.1",
     "marked": "^7.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
